app/core_binding/k1520.py

"""
K1520 Emulator - Core Binding
==============================

Python ctypes wrapper for libk1520core.so C-API.
Provides high-level Python interface to K1520 emulator.

Typical usage:
    from app.core_binding.k1520 import K1520Emulator
    
    emu = K1520Emulator()
    emu.power_on()
    emu.mount_disk(0, "disk_b.img", "cpa800", False)
    
    # Run for 10000 CPU cycles
    cycles = emu.run(10000)
    
    # Get framebuffer and display
    fb = emu.get_framebuffer()
"""

import ctypes
import os
import sys
from pathlib import Path
from typing import Optional
import threading
import time

from app import paths

# ════════════════════════════════════════════════════════════════════════════
# Library Loading
# ════════════════════════════════════════════════════════════════════════════

def find_libk1520core() -> Path:
    """Pfad der Kernbibliothek — Quellbaum wie Installation.

    Die Auflösung selbst steht in :mod:`app.paths` (eine Stelle für alle
    Pfade, siehe ``doc/design/13_distribution.md``); hier bleibt nur der
    plattformübergreifende Name der Funktion, den der Rest des Projekts kennt.

    Raises:
        FileNotFoundError: kein Kandidat existiert (Meldung listet alle auf).
    """
    return paths.core_library()

#: Ladehinweise nur auf Wunsch — in einer Installation ist die Konsole des
#: Anwenders kein Protokoll.  ``K1520_DEBUG=1`` schaltet sie ein.
_DEBUG_LOAD = bool(os.environ.get("K1520_DEBUG"))

try:
    paths.prepare_library_load()  # Windows: DLL-Suchverzeichnis anmelden
    _lib_path = find_libk1520core()
    if _DEBUG_LOAD:
        print(f"[DEBUG] Loading library from: {_lib_path}", file=sys.stderr)
    _lib = ctypes.CDLL(str(_lib_path), use_errno=True)
    if _DEBUG_LOAD:
        print(f"[DEBUG] Library loaded successfully", file=sys.stderr)
except Exception as e:
    print(f"ERROR: {e}", file=sys.stderr)
    if _DEBUG_LOAD:
        import traceback
        traceback.print_exc()
    sys.exit(1)

# ════════════════════════════════════════════════════════════════════════════
# C-API Function Signatures
# ════════════════════════════════════════════════════════════════════════════

# Handle type (opaque pointer)
K1520Handle = ctypes.c_void_p

# Legacy K5601 CP/A format names (kept for reference).  The authoritative,
# drive-type-specific list is queried at runtime via K1520Emulator.drive_formats().
DISK_FORMATS = ["cpa780", "cpa800", "cpa640", "cpa624"]

# Core DriveProfile names per K5122 slot (see core builtinDriveProfile).
# "none" marks an empty slot ("kein Laufwerk"); "" / None keeps the default (K5601).
DRIVE_NONE = "none"

# k1520_create(machine_type: int) -> K1520Handle
_lib.k1520_create.argtypes = [ctypes.c_int]
_lib.k1520_create.restype = K1520Handle

# k1520_create_configured(machine_type, d0, d1, d2, d3: const char*) -> K1520Handle
_lib.k1520_create_configured.argtypes = [
    ctypes.c_int, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_char_p
]
_lib.k1520_create_configured.restype = K1520Handle

# k1520_last_init_error() -> const char*   (Grund eines fehlgeschlagenen create)
_lib.k1520_last_init_error.argtypes = []
_lib.k1520_last_init_error.restype = ctypes.c_char_p

# k1520_destroy(K1520Handle) -> void
_lib.k1520_destroy.argtypes = [K1520Handle]
_lib.k1520_destroy.restype = None

# k1520_power_on(K1520Handle) -> void
_lib.k1520_power_on.argtypes = [K1520Handle]
_lib.k1520_power_on.restype = None

# k1520_reset(K1520Handle) -> void
_lib.k1520_reset.argtypes = [K1520Handle]
_lib.k1520_reset.restype = None

# k1520_run(K1520Handle, max_cycles: int32_t) -> int32_t
_lib.k1520_run.argtypes = [K1520Handle, ctypes.c_int32]
_lib.k1520_run.restype = ctypes.c_int32

# k1520_framebuffer(K1520Handle) -> const uint8_t*
_lib.k1520_framebuffer.argtypes = [K1520Handle]
_lib.k1520_framebuffer.restype = ctypes.POINTER(ctypes.c_uint8)

# k1520_fb_width(K1520Handle) -> int
_lib.k1520_fb_width.argtypes = [K1520Handle]
_lib.k1520_fb_width.restype = ctypes.c_int

# k1520_fb_height(K1520Handle) -> int
_lib.k1520_fb_height.argtypes = [K1520Handle]
_lib.k1520_fb_height.restype = ctypes.c_int

# k1520_fb_dirty(K1520Handle) -> bool
_lib.k1520_fb_dirty.argtypes = [K1520Handle]
_lib.k1520_fb_dirty.restype = ctypes.c_bool

# k1520_fb_clear_dirty(K1520Handle) -> void
_lib.k1520_fb_clear_dirty.argtypes = [K1520Handle]
_lib.k1520_fb_clear_dirty.restype = None

# k1520_key_press(K1520Handle, keycode: uint32_t, shift: bool, ctrl: bool) -> void
_lib.k1520_key_press.argtypes = [K1520Handle, ctypes.c_uint32, ctypes.c_bool, ctypes.c_bool]
_lib.k1520_key_press.restype = None

# k1520_key_release(K1520Handle, keycode: uint32_t) -> void
_lib.k1520_key_release.argtypes = [K1520Handle, ctypes.c_uint32]
_lib.k1520_key_release.restype = None

# k1520_mount_disk(K1520Handle, drive: int, path: const char*, format: const char*, wp: bool) -> bool
_lib.k1520_mount_disk.argtypes = [K1520Handle, ctypes.c_int, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_bool]
_lib.k1520_mount_disk.restype = ctypes.c_bool

# k1520_create_disk(K1520Handle, drive: int, path: const char*, format: const char*, wp: bool) -> bool
_lib.k1520_create_disk.argtypes = [K1520Handle, ctypes.c_int, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_bool]
_lib.k1520_create_disk.restype = ctypes.c_bool

# k1520_save_disk_as(K1520Handle, drive: int, path: const char*, format: const char*) -> bool
_lib.k1520_save_disk_as.argtypes = [K1520Handle, ctypes.c_int, ctypes.c_char_p, ctypes.c_char_p]
_lib.k1520_save_disk_as.restype = ctypes.c_bool

# k1520_disk_raw_compatible(K1520Handle, drive: int) -> bool
_lib.k1520_disk_raw_compatible.argtypes = [K1520Handle, ctypes.c_int]
_lib.k1520_disk_raw_compatible.restype = ctypes.c_bool

# k1520_disk_path(K1520Handle, drive: int) -> const char*
_lib.k1520_disk_path.argtypes = [K1520Handle, ctypes.c_int]
_lib.k1520_disk_path.restype = ctypes.c_char_p

# k1520_disk_container(K1520Handle, drive: int) -> const char*
_lib.k1520_disk_container.argtypes = [K1520Handle, ctypes.c_int]
_lib.k1520_disk_container.restype = ctypes.c_char_p

# k1520_flush_disks(K1520Handle) -> bool
_lib.k1520_flush_disks.argtypes = [K1520Handle]
_lib.k1520_flush_disks.restype = ctypes.c_bool

# k1520_unmount_disk(K1520Handle, drive: int) -> bool
_lib.k1520_unmount_disk.argtypes = [K1520Handle, ctypes.c_int]
_lib.k1520_unmount_disk.restype = ctypes.c_bool

# k1520_drive_format_count(K1520Handle, drive: int) -> int
_lib.k1520_drive_format_count.argtypes = [K1520Handle, ctypes.c_int]
_lib.k1520_drive_format_count.restype = ctypes.c_int

# k1520_drive_format_name(K1520Handle, drive: int, index: int) -> const char*
_lib.k1520_drive_format_name.argtypes = [K1520Handle, ctypes.c_int, ctypes.c_int]
_lib.k1520_drive_format_name.restype = ctypes.c_char_p

# k1520_drive_default_format(K1520Handle, drive: int) -> const char*
_lib.k1520_drive_default_format.argtypes = [K1520Handle, ctypes.c_int]
_lib.k1520_drive_default_format.restype = ctypes.c_char_p

# k1520_format_description(K1520Handle, name: const char*) -> const char*
_lib.k1520_format_description.argtypes = [K1520Handle, ctypes.c_char_p]
_lib.k1520_format_description.restype = ctypes.c_char_p

# k1520_formats_source(K1520Handle) -> const char*
_lib.k1520_formats_source.argtypes = [K1520Handle]
_lib.k1520_formats_source.restype = ctypes.c_char_p

# k1520_last_error(K1520Handle) -> const char*
_lib.k1520_last_error.argtypes = [K1520Handle]
_lib.k1520_last_error.restype = ctypes.c_char_p

# k1520_is_disk_active(K1520Handle, drive: int) -> bool
_lib.k1520_disk_active.argtypes = [K1520Handle, ctypes.c_int]
_lib.k1520_disk_active.restype = ctypes.c_bool

# k1520_is_disk_write_protected(K1520Handle, drive: int) -> bool
_lib.k1520_disk_write_protected.argtypes = [K1520Handle, ctypes.c_int]
_lib.k1520_disk_write_protected.restype = ctypes.c_bool

# k1520_set_write_protect(K1520Handle, drive: int, wp: bool) -> void
_lib.k1520_set_write_protect.argtypes = [K1520Handle, ctypes.c_int, ctypes.c_bool]
_lib.k1520_set_write_protect.restype = None

# k1520_disk_led(K1520Handle, drive: int) -> bool
_lib.k1520_disk_led.argtypes = [K1520Handle, ctypes.c_int]
_lib.k1520_disk_led.restype = ctypes.c_bool

# k1520_disk_motor(K1520Handle, drive: int) -> bool
_lib.k1520_disk_motor.argtypes = [K1520Handle, ctypes.c_int]
_lib.k1520_disk_motor.restype = ctypes.c_bool

# k1520_head_loaded(K1520Handle) -> bool
_lib.k1520_head_loaded.argtypes = [K1520Handle]
_lib.k1520_head_loaded.restype = ctypes.c_bool

# ─── Bisher unbenutzte, aber exportierte C-API ──────────────────────────────
# Vollständig deklariert, damit die ctypes-Signaturen NIE von k1520_api.h
# abdriften — tests/python/test_c_api.py vergleicht Header und Bindung.

# k1520_stop(K1520Handle) -> void   (laufenden run() abbrechen)
_lib.k1520_stop.argtypes = [K1520Handle]
_lib.k1520_stop.restype = None

# k1520_version() -> const char*
_lib.k1520_version.argtypes = []
_lib.k1520_version.restype = ctypes.c_char_p

# k1520_mem_read(K1520Handle, addr: uint16) -> uint8
_lib.k1520_mem_read.argtypes = [K1520Handle, ctypes.c_uint16]
_lib.k1520_mem_read.restype = ctypes.c_uint8

# k1520_mem_write(K1520Handle, addr: uint16, data: uint8) -> void
_lib.k1520_mem_write.argtypes = [K1520Handle, ctypes.c_uint16, ctypes.c_uint8]
_lib.k1520_mem_write.restype = None

# k1520_io_read(K1520Handle, port: uint8) -> uint8
_lib.k1520_io_read.argtypes = [K1520Handle, ctypes.c_uint8]
_lib.k1520_io_read.restype = ctypes.c_uint8

# k1520_set_console_mode(K1520Handle, enable: bool) -> void
_lib.k1520_set_console_mode.argtypes = [K1520Handle, ctypes.c_bool]
_lib.k1520_set_console_mode.restype = None

# k1520_console_poll(K1520Handle, x*, y*, ch*) -> bool
_lib.k1520_console_poll.argtypes = [K1520Handle, ctypes.POINTER(ctypes.c_int),
                                    ctypes.POINTER(ctypes.c_int), ctypes.c_char_p]
_lib.k1520_console_poll.restype = ctypes.c_bool

# k1520_console_key(K1520Handle, c: char) -> void
_lib.k1520_console_key.argtypes = [K1520Handle, ctypes.c_char]
_lib.k1520_console_key.restype = None

# k1520_serial_send(K1520Handle, port: int, byte: uint8) -> void
_lib.k1520_serial_send.argtypes = [K1520Handle, ctypes.c_int, ctypes.c_uint8]
_lib.k1520_serial_send.restype = None

# k1520_serial_set_rx_cb(K1520Handle, port: int, cb, user*) -> void
K1520SerialRxCb = ctypes.CFUNCTYPE(None, ctypes.c_uint8, ctypes.c_void_p)
_lib.k1520_serial_set_rx_cb.argtypes = [K1520Handle, ctypes.c_int,
                                        K1520SerialRxCb, ctypes.c_void_p]
_lib.k1520_serial_set_rx_cb.restype = None

# Textbildschirm des K7024: 80x24 Zeichen ab 0xF800 (Bit7 = Invers-Attribut).
VRAM_BASE, VRAM_COLS, VRAM_ROWS = 0xF800, 80, 24

# ════════════════════════════════════════════════════════════════════════════
# K1520 Emulator Python Class
# ════════════════════════════════════════════════════════════════════════════

class K1520Emulator:
    """Python wrapper for K1520 A5120 emulator."""
    
    def __init__(self, drive_types: Optional[list] = None):
        """Initialize emulator instance.
